test_cases/tests/diesel/bad_sql_query.stderr
error[E0277]: the trait bound `std::string::String: FromSqlRow<Untyped, Pg>` is not satisfied
    --> tests/diesel/bad_sql_query.rs:4:28
     |
4    |     diesel::sql_query("…").load(conn)
     |                            ^^^^ the trait `FromSqlRow<Untyped, Pg>` is not implemented for `std::string::String`
     |
     = help: the following other types implement trait `FromSqlRow<ST, DB>`:
               <(T1, T0) as FromSqlRow<(ST1, Untyped), __DB>>
               <(T1, T2, T0) as FromSqlRow<(ST1, ST2, Untyped), __DB>>
               <(T1, T2, T3, T0) as FromSqlRow<(ST1, ST2, ST3, Untyped), __DB>>
               <(T1, T2, T3, T4, T0) as FromSqlRow<(ST1, ST2, ST3, ST4, Untyped), __DB>>
               <(T1, T2, T3, T4, T5, T0) as FromSqlRow<(ST1, ST2, ST3, ST4, ST5, Untyped), __DB>>
               <(T1, T2, T3, T4, T5, T6, T0) as FromSqlRow<(ST1, ST2, ST3, ST4, ST5, ST6, Untyped), __DB>>
               <(T1, T2, T3, T4, T5, T6, T7, T0) as FromSqlRow<(ST1, ST2, ST3, ST4, ST5, ST6, ST7, Untyped), __DB>>
               <(T1, T2, T3, T4, T5, T6, T7, T8, T0) as FromSqlRow<(ST1, ST2, ST3, ST4, ST5, ST6, ST7, ST8, Untyped), __DB>>
             and 7 others
     = note: required because of the requirements on the impl of `load_dsl::private::CompatibleType<std::string::String, Pg>` for `Untyped`
     = note: required because of the requirements on the impl of `LoadQuery<'_, diesel::PgConnection, std::string::String>` for `SqlQuery`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> $CARGO/diesel-2.0.0-rc.0/src/query_dsl/mod.rs
     |
     |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `diesel::RunQueryDsl::load`
